add photo feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="theatre">Theatre</string>
     <string name="subway">Subway</string>
     <string name="nightlife">Nightlife</string>
+    <string name="sold">SOLD</string>
 
 </resources>
