--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="update">Update</string>
     <string name="clear_search">Clear search</string>
     <string name="take_a_picture">Take a picture</string>
+    <string name="upload_in_progress">Upload in progress</string>
 
 
     <string-array name="type">
